--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#15803d" />
+    <meta name="format-detection" content="telephone=no" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nông Nghiệp Xanh - Shop Thuốc BVTV & Phân Bón</title>
+    <title>Cửa hàng Vật tư nông nghiệp - Nông Nghiệp Xanh | Phân bón, Thuốc BVTV</title>
+    <meta name="description" content="Vật tư nông nghiệp chất lượng – Phân bón, thuốc bảo vệ thực vật, chế phẩm sinh học, hạt giống. Giao hàng tận nơi, thanh toán COD." />
 </head>
 
 <body>
